// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SubGenerator quarkus of quarkus JHipster blueprint > run > should succeed 1`] = `
{
  ".mvn/jvm.config": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.jar": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.properties": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "checkstyle.xml": {
    "stateCleared": "modified",
  },
  "mvnw": {
    "stateCleared": "modified",
  },
  "mvnw.cmd": {
    "stateCleared": "modified",
  },
  "npmw": {
    "stateCleared": "modified",
  },
  "npmw.cmd": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "pom.xml": {
    "stateCleared": "modified",
  },
  "src/main/docker/Dockerfile.jvm": {
    "stateCleared": "modified",
  },
  "src/main/docker/Dockerfile.legacy-jar": {
    "stateCleared": "modified",
  },
  "src/main/docker/Dockerfile.native": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/postgresql.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/services.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/Constants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JHipsterProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JsonbConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LocalDateProvider.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/hibernate/JHipsterCompatibleImplicitNamingStrategy.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/hibernate/JHipsterCompatiblePhysicalNamingStrategy.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/hibernate/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Authority.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/User.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/AuthoritiesConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/BCryptPasswordHasher.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/RandomUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/UserNotActivatedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/UsernameNotFoundException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/jwt/TokenProvider.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/jwt/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/AuthenticationService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/EmailAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/InvalidPasswordException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/MailService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/ManagementInfoService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/UserService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/UsernameAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/ManagementInfoDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/PasswordChangeDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/UserDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/mapper/UserMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/mapper/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AccountResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AuthorityResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/JHipsterConfigurationEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/JHipsterLoggersEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/JHipsterMetricsEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/ManagementInfoResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/SpaFilter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/UserJWTController.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/UserResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/BadRequestAlertException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ConstraintViolationExceptionMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/EmailAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/EmailNotFoundException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ErrorConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/FieldErrorVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/InvalidPasswordWebException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/LoginAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/ConfigPropsVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/EnvVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/KeyAndPasswordVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/LoggerVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/LoginVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/ManagedUserVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/util/HeaderUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/util/ResponseUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/util/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/META-INF/resources/publicKey.pem": {
    "stateCleared": "modified",
  },
  "src/main/resources/application.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/00000000000000_initial_schema.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/authority.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/user.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/user_authority.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/master.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/default_banner.txt": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages_en.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/jwt/privateKey.pem": {
    "stateCleared": "modified",
  },
  "src/main/resources/resources-config.json": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/mail/activationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/mail/creationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/mail/passwordResetEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/activate.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/configuration.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/error.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/global.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/health.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/home.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/login.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/logs.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/metrics.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/password.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/register.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/reset.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/sessions.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/settings.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/user-management.json": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/ArchTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/TestUtil.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/builder/UserBuilder.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/LocalDateProviderTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/mock/JHipsterPropertiesMock.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AssertUtils.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/UserTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/infrastructure/EmailServerResource.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/infrastructure/InjectMailServer.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/MailServiceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/mapper/UserMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/utility/IntegrationTestBase.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AuthorityResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/ManagementInfoResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/UserJWTControllerTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/UserResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/resources/i18n/messages_en.properties": {
    "stateCleared": "modified",
  },
}
`;

exports[`SubGenerator quarkus of quarkus JHipster blueprint > run with oauth2 and mongodb > gradle.properties content should match 1`] = `
{
  "gradle.properties": {
    "contents": "rootProject.name=jhipster
quarkusPluginVersion=3.11.1
quarkusPlatformArtifactId=quarkus-bom
quarkusPlatformGroupId=io.quarkus
quarkusPlatformVersion=3.11.1

# Build properties
node_version=NODE_VERSION
npm_version=NPM_VERSION

# Dependency versions
mapstruct_version=1.5.5.Final
archunit_junit5_version=1.2.1
resteasy_problem_version=3.9.0
assertj_version=1.3.0
mongockBom_version=4.3.8
commons_vfs2_version=2.9.0
graal_version=23.1.2

# gradle plugin version
git_properties_plugin_version=2.4.1
gradle_node_plugin_version=7.0.2
sonarqube_plugin_version=4.3.0.3225
checkstyle_version=10.17.0
wiremock_version=3.0.1
testcontainers_keycloak_version=3.4.0
no_http_checkstyle_version=0.0.11
modernizer_plugin_version=1.8.0

# jhipster-needle-gradle-property - JHipster will add additional properties here

## below are some of the gradle performance improvement settings that can be used as required, these are not enabled by default

## The Gradle daemon aims to improve the startup and execution time of Gradle.
## The daemon is enabled by default in Gradle 3+ setting this to false will disable this.
## TODO: disable daemon on CI, since builds should be clean and reliable on servers
## https://docs.gradle.org/current/userguide/gradle_daemon.html#sec:ways_to_disable_gradle_daemon
## uncomment the below line to disable the daemon

#org.gradle.daemon=false

## Specifies the JVM arguments used for the daemon process.
## The setting is particularly useful for tweaking memory settings.
## Default value: -Xmx1024m -XX:MaxPermSize=256m
## uncomment the below line to override the daemon defaults

#org.gradle.jvmargs=-Xmx1024m -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8

## When configured, Gradle will run in incubating parallel mode.
## This option should only be used with decoupled projects. More details, visit
## http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
## uncomment the below line to enable parallel mode

#org.gradle.parallel=true

## Enables new incubating mode that makes Gradle selective when configuring projects.
## Only relevant projects are configured which results in faster builds for large multi-projects.
## http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:configuration_on_demand
## uncomment the below line to enable the selective mode

#org.gradle.configureondemand=true

## Install and use a local version of node and npm.
nodeInstall
",
    "stateCleared": "modified",
  },
}
`;

exports[`SubGenerator quarkus of quarkus JHipster blueprint > run with oauth2 and mongodb > should succeed 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "build.gradle": {
    "stateCleared": "modified",
  },
  "buildSrc/build.gradle": {
    "stateCleared": "modified",
  },
  "buildSrc/gradle/libs.versions.toml": {
    "stateCleared": "modified",
  },
  "checkstyle.xml": {
    "stateCleared": "modified",
  },
  "gradle.properties": {
    "stateCleared": "modified",
  },
  "gradle/docker.gradle": {
    "stateCleared": "modified",
  },
  "gradle/libs.versions.toml": {
    "stateCleared": "modified",
  },
  "gradle/profile_dev.gradle": {
    "stateCleared": "modified",
  },
  "gradle/profile_prod.gradle": {
    "stateCleared": "modified",
  },
  "gradle/sonar.gradle": {
    "stateCleared": "modified",
  },
  "gradle/wrapper/gradle-wrapper.jar": {
    "stateCleared": "modified",
  },
  "gradle/wrapper/gradle-wrapper.properties": {
    "stateCleared": "modified",
  },
  "gradlew": {
    "stateCleared": "modified",
  },
  "gradlew.bat": {
    "stateCleared": "modified",
  },
  "npmw": {
    "stateCleared": "modified",
  },
  "npmw.cmd": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "settings.gradle": {
    "stateCleared": "modified",
  },
  "src/main/docker/Dockerfile.jvm": {
    "stateCleared": "modified",
  },
  "src/main/docker/Dockerfile.legacy-jar": {
    "stateCleared": "modified",
  },
  "src/main/docker/Dockerfile.native": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/README.md": {
    "stateCleared": "modified",
  },
  "src/main/docker/central-server-config/application.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/config/git2consul.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/consul.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/keycloak.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/mongodb-cluster.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/mongodb.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/mongodb/MongoDB.Dockerfile": {
    "stateCleared": "modified",
  },
  "src/main/docker/mongodb/scripts/init_replicaset.js": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/realm-config/jhipster-realm.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/realm-config/keycloak-health-check.sh": {
    "stateCleared": "modified",
  },
  "src/main/docker/services.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/zipkin.yml": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/Constants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JHipsterProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JsonbConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LocalDateProvider.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/MongockConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/dbmigrations/InitialSetupMigration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/dbmigrations/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/AuthoritiesConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/IdGenerator.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/ManagementInfoService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/StringIdGenerator.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/ManagementInfoDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AccountResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AuthInfoResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/JHipsterConfigurationEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/JHipsterLoggersEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/JHipsterMetricsEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/LogoutResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/ManagementInfoResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/SpaFilter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/UserOauth2Controller.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/BadRequestAlertException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ConstraintViolationExceptionMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ErrorConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/FieldErrorVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/ConfigPropsVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/EnvVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/LoggerVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/UserVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/util/HeaderUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/util/ResponseUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/util/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/application.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/default_banner.txt": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages_en.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/reflect-config-mongo.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/activate.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/configuration.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/error.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/gateway.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/global.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/health.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/home.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/login.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/logs.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/metrics.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/password.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/register.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/reset.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/sessions.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/settings.json": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/ArchTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/TestUtil.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/LocalDateProviderTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/mock/JHipsterPropertiesMock.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AssertUtils.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/infrastructure/InjectKeycloakServer.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/infrastructure/KeycloakServerResource.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/infrastructure/MockOidcServerTestResource.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/utility/IntegrationTestBase.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/LogoutResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/ManagementInfoResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/resources/jhipster-realm.json": {
    "stateCleared": "modified",
  },
}
`;

exports[`SubGenerator quarkus of quarkus JHipster blueprint > with some entities > should succeed 1`] = `
{
  ".jhipster/Entity.json": {
    "stateCleared": "modified",
  },
  ".mvn/jvm.config": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.jar": {
    "stateCleared": "modified",
  },
  ".mvn/wrapper/maven-wrapper.properties": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "checkstyle.xml": {
    "stateCleared": "modified",
  },
  "mvnw": {
    "stateCleared": "modified",
  },
  "mvnw.cmd": {
    "stateCleared": "modified",
  },
  "npmw": {
    "stateCleared": "modified",
  },
  "npmw.cmd": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "pom.xml": {
    "stateCleared": "modified",
  },
  "src/main/docker/Dockerfile.jvm": {
    "stateCleared": "modified",
  },
  "src/main/docker/Dockerfile.legacy-jar": {
    "stateCleared": "modified",
  },
  "src/main/docker/Dockerfile.native": {
    "stateCleared": "modified",
  },
  "src/main/docker/app.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/JVM.json": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/dashboards/dashboard.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/grafana/provisioning/datasources/datasource.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/jhipster-control-center.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/monitoring.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/postgresql.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/services.yml": {
    "stateCleared": "modified",
  },
  "src/main/docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/Constants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JHipsterProperties.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JsonbConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/LocalDateProvider.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/hibernate/JHipsterCompatibleImplicitNamingStrategy.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/hibernate/JHipsterCompatiblePhysicalNamingStrategy.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/hibernate/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Authority.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Entity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/User.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/AuthoritiesConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/BCryptPasswordHasher.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/RandomUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/UserNotActivatedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/UsernameNotFoundException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/jwt/TokenProvider.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/jwt/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/security/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/AuthenticationService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/EmailAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/InvalidPasswordException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/MailService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/ManagementInfoService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/UserService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/UsernameAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/EntityDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/ManagementInfoDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/PasswordChangeDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/UserDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/dto/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/mapper/EntityMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/mapper/UserMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/mapper/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/service/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AccountResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/AuthorityResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/EntityResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/JHipsterConfigurationEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/JHipsterLoggersEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/JHipsterMetricsEndpoint.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/ManagementInfoResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/SpaFilter.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/UserJWTController.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/UserResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/BadRequestAlertException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ConstraintViolationExceptionMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/EmailAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/EmailNotFoundException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/ErrorConstants.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/FieldErrorVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/InvalidPasswordWebException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/LoginAlreadyUsedException.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/errors/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/ConfigPropsVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/EnvVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/KeyAndPasswordVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/LoggerVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/LoginVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/ManagedUserVM.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/vm/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/util/HeaderUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/util/ResponseUtil.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/util/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/META-INF/resources/publicKey.pem": {
    "stateCleared": "modified",
  },
  "src/main/resources/application.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/00000000000000_initial_schema.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/20200804035352_added_entity_Entity.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/authority.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/user.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/data/user_authority.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/fake-data/entity.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/master.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/default_banner.txt": {
    "stateCleared": "modified",
  },
  "src/main/resources/i18n/messages_en.properties": {
    "stateCleared": "modified",
  },
  "src/main/resources/jwt/privateKey.pem": {
    "stateCleared": "modified",
  },
  "src/main/resources/resources-config.json": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/mail/activationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/mail/creationEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/resources/templates/mail/passwordResetEmail.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/activate.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/configuration.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/entity.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/error.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/global.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/health.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/home.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/login.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/logs.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/metrics.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/password.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/register.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/reset.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/sessions.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/settings.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/user-management.json": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/ArchTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/TestUtil.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/builder/UserBuilder.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/LocalDateProviderTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/config/mock/JHipsterPropertiesMock.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AssertUtils.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/EntityAsserts.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/EntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/EntityTestSamples.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/UserTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/infrastructure/EmailServerResource.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/infrastructure/InjectMailServer.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/MailServiceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/dto/EntityDTOTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/mapper/EntityMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/service/mapper/UserMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/utility/IntegrationTestBase.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AccountResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/AuthorityResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/EntityResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/ManagementInfoResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/UserJWTControllerTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/UserResourceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/resources/i18n/messages_en.properties": {
    "stateCleared": "modified",
  },
}
`;
